--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,11 @@ ul > li {
     font-weight: 400;
     font-size: 2.5rem;
 }
-
+footer > p{
+    font-size: 1.5rem;
+    font-style: italic;
+    color:#003366
+}
 @media (max-width: 460px) {
     h2 {
       font-size: 3.5rem;
